--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,7 +4,28 @@
 
 @tailwind utilities;
 
+body {
+    @apply bg-gray-200;
+}
+
 .navbar-laravel {
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.nav-item {
+    @apply py-1 px-3;
+}
+
+.row {
+    @apply flex;
+}
+
+.col-2 {
+    @apply w-1/4;
+}
+
+.col-4 {
+    @apply w-1/2;
+}
+
