--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11365,9 +11365,32 @@ video {
   z-index: auto;
 }
 
+body {
+  background-color: #edf2f7;
+}
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.nav-item {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.row {
+  display: flex;
+}
+
+.col-2 {
+  width: 25%;
+}
+
+.col-4 {
+  width: 50%;
 }
 
 @media (min-width: 640px) {
